[package]
name = "render_markdown"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = "0.13.0"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["Window", "Request", "RequestInit", "RequestMode", "Response"] }
