[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
