[package]
name = "linklocker"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12"
askama_axum = "0.4"
axum = "0.7"
bcrypt = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = "0.12"
